Add headers, testng, fix tests

--- a/build.gradle
+++ b/build.gradle
@@ -135,6 +135,25 @@ test {
     }
 }
 
+task testng(type: Test) {
+    useTestNG()
+    testLogging  {
+        events=["skipped", "failed"]
+        exceptionFormat="full"
+
+        debug.events = ["skipped", "failed"]
+        debug.exceptionFormat="full"
+
+        info.events = ["failed", "skipped"]
+        info.exceptionFormat="full"
+
+        warn.events = ["failed", "skipped"]
+        warn.exceptionFormat="full"
+    }
+}
+
+check.dependsOn testng
+
 license {
     header rootProject.file('HEADER')
     ext.year = Calendar.getInstance().get(Calendar.YEAR)
