--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,23 @@
-version=0.6.0
 org.gradle.jvmargs=-XX:+IgnoreUnrecognizedVMOptions --permit-illegal-access --show-version
+GROUP=com.github.akarnokd
+VERSION_NAME=0.6.0
+version=0.6.0
 
+POM_ARTIFACT_ID=async-enumerable
+POM_NAME=Prototype Java 9 library based on the asynchronous enumerable concept (where moveNext() returns a task to compose over).
+POM_PACKAGING=jar
+
+POM_DESCRIPTION=Prototype Java 9 library based on the asynchronous enumerable concept (where moveNext() returns a task to compose over).
+POM_INCEPTION_YEAR=2016
+
+POM_URL=https://github.com/akarnokd/async-enumerable
+POM_SCM_URL=https://github.com/akarnokd/async-enumerable
+POM_SCM_CONNECTION=scm:git:git://github.com/akarnokd/async-enumerable.git
+POM_SCM_DEV_CONNECTION=scm:git:ssh://git@github.com/akarnokd/async-enumerable.git
+
+POM_LICENCE_NAME=The Apache Software License, Version 2.0
+POM_LICENCE_URL=https://www.apache.org/licenses/LICENSE-2.0.txt
+POM_LICENCE_DIST=repo
+
+POM_DEVELOPER_ID=akarnokd
+POM_DEVELOPER_NAME=David Karnok
